--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "@react-navigation/stack": "^5.14.5",
     "@use-expo/font": "^2.0.0",
     "expo": "~41.0.1",
+    "expo-image-manipulator": "~9.1.0",
+    "expo-image-picker": "~10.1.4",
+    "expo-permissions": "~12.0.1",
     "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
@@ -29,10 +33,7 @@
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
-    "redux-thunk": "^2.3.0",
-    "expo-image-picker": "~10.1.4",
-    "expo-permissions": "~12.0.1",
-    "expo-image-manipulator": "~9.1.0"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
